# cayleypy

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  datasets.py  datasets_test.py  graphs_lib.py  graphs_lib_test.py  lint.sh  makefile  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yaml  deploy-docs.yaml
cayleypy/: CayleyGraph_Multi.py  __init__.py  beam_search_result.py  bfs_bitmask.py  bfs_bitmask_test.py  bfs_numpy.py  bfs_numpy_test.py  bfs_result.py  bfs_result_test.py  bfs_special.py  bfs_special_test.py  cayley_graph.py  cayley_graph_def.py  cayley_graph_def_test.py  cayley_graph_test.py  cayley_path.py  create_graph.py  create_graph_test.py  datasets.py  datasets_test.py  device_config.py  graphs_lib.py  graphs_lib_test.py  hasher.py  hungarian_rings.py  hungarian_rings_test.py  io_utils.py  permutation_utils.py  permutation_utils_test.py  predictor.py  predictor_test.py  string_encoder.py  string_encoder_test.py  torch_utils.py
cayleypy/algo/: __init__.py  beam_search.py  beam_search_multigpu.py  beam_search_multigpu_test.py  beam_search_result.py  beam_search_test.py  bfs_algo.py  bfs_bitmask.py  bfs_bitmask_test.py  bfs_distributed.py  bfs_mitm.py  bfs_mitm_test.py  bfs_numpy.py  bfs_numpy_test.py  bfs_result.py  find_path.py  find_path_test.py  interactive_bfs_test.py  random_walks.py
cayleypy/data/: README.md  all_cycles_cayley_growth.csv  all_transpositions_cayley_growth.csv  burnt_pancake_cayley_growth.csv  coxeter_cayley_growth.csv  cyclic_coxeter_cayley_growth.csv  down_cycles_cayley_growth.csv  full_reversals_cayley_growth.csv  globes_growth.csv  heisenberg_growth.csv  hungarian_rings_growth.csv  lrx_cayley_growth.csv  lrx_coset_growth.csv  lsl_cycles_cayley_growth.csv  lx_cayley_growth.csv  pancake_cayley_growth.csv  prefix_cycles_cayley_growth.csv  puzzles_growth.csv  pyraminx_cayley_growth.csv  rapaport_m1_cayley_growth.csv  rapaport_m2_cayley_growth.csv  signed_reversals_cayley_growth.csv  top_spin_cayley_growth.csv  (+1 more)
docs/: agent_memory.md  api.rst  build_docs.sh  conf.py  index.rst
lrx-binary-data/: test.csv
tools/: check_style.sh  lint.sh
(+18 files in other folders)
